--- a/frontend/src/style/globalStyle.css
+++ b/frontend/src/style/globalStyle.css
@@ -1,20 +1,13 @@
-@media (max-device-width: 1700px) {
-  html {
-    font-size: 0.87rem;
-  }
-}
 
 body {
-  font-family: helvetica;
-  /* background-color: #373d5c; */
-  background-color: whitesmoke;
-  margin: 0px;
+    font-family: 'sans-serif';
+    margin: 0px;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Aller Display';
     src: url('./fonts/AllerDisplay.eot') format('eot'),
-         url('./fonts/AllerDisplay.woff') format('woff'),
-         url('./fonts/AllerDisplay.ttf') format('truetype'),
-         url('./fonts/AllerDisplay.svg') format('svg');
-  }
+        url('./fonts/AllerDisplay.woff') format('woff'),
+        url('./fonts/AllerDisplay.ttf') format('truetype'),
+        url('./fonts/AllerDisplay.svg') format('svg');
+} */
